# sec-risk-intelligence

./: .env.example  .gitignore  AGENTS.md  README.md  demo.py  eval.json  hidden_risk_annual.discovery.json  pyproject.toml  requirements.txt
.codex/skills/sec-hidden-risk-identification/: SKILL.md
.codex/skills/sec-hidden-risk-identification/agents/: openai.yaml
.codex/skills/sec-risk-factor-identification/: SKILL.md
.codex/skills/sec-risk-factor-identification/agents/: openai.yaml
notebooks/: deepseek_hidden_risk_annual_eval.ipynb  deepseek_risk_factor_eval.ipynb  jpmorgan_latest_10k_risk_factor_prompt.ipynb
src/: __init__.py  settings.py
src/data_extraction/: __init__.py  build_bank_ciks.py  company_filings.py  edgar_crawler_adapter.py  sec_filings.py
src/data_extraction/edgar-crawler/: __init__.py  bank_ciks.txt  config.json  extract_items.py
src/evals/: __init__.py  hidden_risk_annual.py  risk_factor_listing.py
src/llm/: __init__.py  deepseek.py
src/prompts/: __init__.py  hidden_risk_annual.py  risk_factor_listing.py  subsection_breakdown.py
src/tests/: test_edgar_crawler_adapter.py  test_hidden_risk_annual.py  test_llm_eval.py  test_sec_filings.py
