[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sec-risk-intelligence"
version = "0.1.0"
description = "Evaluate LLM risk analysis on self-contained financial-report fixtures."
requires-python = ">=3.10"
dependencies = [
  "requests",
]

[project.optional-dependencies]
data-extraction = [
  "beautifulsoup4>=4.8.2,<5",
  "chardet<6",
  "click>=7,<9",
  "cssutils>=1.0.2",
  "lxml>=4.9.4,<6",
  "numpy>=1.26,<3",
  "pandas",
  "pathos>=0.2.9",
  "requests",
  "tqdm>=4.42.1",
  "urllib3>=1.26.7,<3",
]
notebook = [
  "matplotlib",
  "pandas",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
pythonpath = ["."]
